# render_gallery

./: build.sh  db.sqlite3  pyproject.toml
gallery/: settings.py  urls.py
pictures/: admin.py  models.py  urls.py  views.py
pictures/migrations/: 0001_initial.py
pictures/static/css/: photos1.css
pictures/templates/: base.html  navbar.html
pictures/templates/photos/: category.html  location.html  photos.html  test.html
